# verilog-filelist-parser

./: CHANGELOG.md  Cargo.toml  README.md
sample/: files.f
src/: file_parser.rs  lib.rs  line_parser.rs  main.rs
testcase/: files.f  files2.f
tests/: integration_tests.rs
