[package]
name = "verilog-filelist-parser"
version = "0.1.0"
authors = ["Raamakrishnan <raamakrishnan1997@gmail.com>"]
edition = "2018"
license = "MIT"
decription = "A library to parse a Verilog Filelist and return a list of files, include directories and defines"
repository = "https://github.com/Raamakrishnan/verilog-filelist-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0.0"